starter-cicd/src/main/resources/k8s/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-spring-boot-app
  labels:
    app: sample-spring-boot-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-spring-boot-app
  template:
    metadata:
      labels:
        app: sample-spring-boot-app
    spec:
      containers:
        - name: sample-spring-boot-app
          image: shikhara1022/sample-spring-boot-app:latest
          ports:
            - containerPort: 8080
