starter-cicd/src/main/resources/k8s/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-spring-boot-app-service
spec:
  selector:
    app: sample-spring-boot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
