starter-cicd/src/main/resources/k8s/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-spring-boot-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: sample-spring-boot-app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-spring-boot-app-service
                port:
                  number: 80
